<resources>
    <string name="app_name">易可</string>
    <string name="str_loading_data">加载数据...</string>
    <string name="str_delete">删除</string>
    <string name="str_edit">编辑</string>
    <string name="str_add_address">添加地址</string>
    <string name="str_my_collection">我的收藏</string>
    <string name="str_manage_address">地址管理</string>
    <string name="str_product_detail">商品详情</string>
    <string name="str_suggest">投诉建议</string>
    <string name="str_category">分类</string>
    <string name="str_car">购物车</string>
    <string name="str_receiver">收货人姓名</string>
    <string name="str_telnum">手机号码</string>
    <string name="str_address">所在地区</string>
    <string name="str_detail_addr">详细地址，请限制在50字以内</string>
    <string name="str_save">保存</string>
    <string name="str_email">输入邮箱地址</string>
    <string name="str_submit">提交</string>
    <string name="str_advie">请输入您的建议</string>
    <string name="str_complain">请输入您的投诉意见</string>
    <string name="str_helpcenter">帮助中心</string>
    <string name="str_brower">最近阅览</string>
    <string name="str_login">登录</string>
    <string name="str_message">消息中心</string>
    <string name="str_find">找回密码</string>
    <string name="str_regist">注册</string>
    <string name="str_setting">设置</string>
    <string name="str_nice">精选</string>
    <string name="str_order">确认订单</string>
    <string name="str_myorder">我的订单</string>
    <string name="str_order_detail">订单详情</string>
    <string name="str_edit_address">编辑地址</string>
    <string name="str_no_collect">您当前没有任何收藏</string>
    <string name="str_contact_type">联系方式</string>
    <string name="str_questions">常见问题</string>
    <string name="str_person_info">个人信息</string>
    <string name="str_account_safe">账号安全</string>
    <string name="str_sendSuccess">短信已发送</string>
    <string name="str_sendFailed">发送短信请求失败</string>
    <string name="str_input_veritycode">请输入短信验证码</string>
    <string name="str_second">秒</string>
    <string name="str_getMess">获取短信</string>
    <string name="str_input_telephone">请输入手机号</string>
    <string name="str_input_password">请输入密码</string>
    <string name="str_logining">正在登录...</string>
    <string name="str_login_failed">登录失败</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_ensure_all">请确认您已经填完所有选项</string>
    <string name="str_reset_pass">重置密码</string>
    <string name="str_after_sale">退款售后</string>
    <string name="str_return_amount">退货数量</string>
    <string name="str_barter_amount">换货数量</string>
    <string name="str_input_reason">请填写备注信息</string>
    <string name="str_upload_success">上传成功</string>
    <string name="str_upload_failed">上传失败</string>
    <string name="str_barter_reason">换货原因</string>
    <string name="str_return_reason">退货原因</string>
    <string name="str_cancel">取消</string>
    <string name="str_change_name">修改用户名称</string>
    <string name="str_new_username">新的用户名称</string>
    <string name="str_exchange_mobile">手机号改绑</string>
    <string name="str_new_mobile">新的手机号</string>
    <string name="str_gender">选择性别</string>
    <string name="str_input_gender">填写性别(男/女)</string>
    <string name="str_birthday">填写生日</string>
    <string name="str_input_birthday">生日(XXXX-XX-XX)</string>
    <string name="str_getdata_failed">获取数据失败</string>
    <string name="str_no_logistics">没有物流信息</string>
    <string name="str_logistics_detail">物流详情</string>
    <string name="str_old_pw">请输入原密码</string>
    <string name="str_new_pw">请输入新密码</string>
    <string name="str_change_pw">修改密码</string>
    <string name="str_change_fail">修改密码失败</string>
    <string name="str_sure_delete_pic">确认删除该图片吗？</string>
    <string name="str_sure">确定</string>
    <string name="str_choose_pay">选择支付方式</string>
    <string name="str_weixin_pay">微信支付</string>
    <string name="str_ali_pay">支付宝</string>
    <string name="str_about">关于</string>
    <string name="str_payed_success">付款成功</string>

    <string name="str_scan">扫码识货</string>
    <string name="str_phone_error">输入号码有误！</string>
    
    <item name="tag_car" type="id"/>
    <item name="tag_order" type="id"/>
</resources>