<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBg">

    <include layout="@layout/layout_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:textColor="@color/colorTextBlack"
        android:background="@drawable/text_bg_gray"
        android:textColorHint="@color/colorGray"
        android:hint="@string/str_old_pw"
        android:id="@+id/old_pw"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:textColor="@color/colorTextBlack"
        android:background="@drawable/text_bg_gray"
        android:textColorHint="@color/colorGray"
        android:hint="@string/str_new_pw"
        android:id="@+id/new_pw"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/str_submit"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:id="@+id/submit_btn"
            android:background="@drawable/app_btn"/>

    </LinearLayout>

</LinearLayout>