<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <include layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:id="@+id/advice_tv"
                android:textColor="@color/colorApp"
                android:text="建议"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/advice_line"
                android:background="@color/colorApp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:id="@+id/complain_tv"
                android:textColor="@color/colorTextBlack"
                android:text="投诉"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/complain_line"
                android:background="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:hint="@string/str_advie"
            android:textColorHint="@color/colorTextGray"
            android:paddingLeft="8dp"
            android:gravity="left"
            android:textSize="14sp"
            android:id="@+id/advice_et"
            android:textColor="@color/colorTextBlack"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:hint="@string/str_complain"
            android:textColorHint="@color/colorTextGray"
            android:paddingLeft="8dp"
            android:gravity="left"
            android:visibility="invisible"
            android:textSize="14sp"
            android:id="@+id/complain_et"
            android:textColor="@color/colorTextBlack"/>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:hint="@string/str_email"
        android:textColorHint="@color/colorTextGray"
        android:paddingLeft="8dp"
        android:textSize="14sp"
        android:id="@+id/email_tv"
        android:textColor="@color/colorTextBlack"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/common_button"
        android:text="@string/str_submit"
        android:textColor="@color/colorWhite"
        android:id="@+id/submit"
        android:textSize="16sp"/>

</LinearLayout>