<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBg">

    <include
        layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_receiver"
            android:textColorHint="@color/colorLocationText"
            android:textSize="16sp"
            android:textColor="@color/colorProduct"
            android:background="@color/colorWhite"
            android:id="@+id/name"
            android:padding="8dp"
            android:paddingLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/entry_dropdown"
                android:id="@+id/province"
                android:text="选择对应省份"
                android:padding="10dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/entry_dropdown"
                android:id="@+id/city"
                android:text="选择对应城市"
                android:padding="10dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/entry_dropdown"
                android:id="@+id/county"
                android:text="选择对应区县"
                android:padding="10dp"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_detail_addr"
            android:textColorHint="@color/colorLocationText"
            android:textSize="16sp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorProduct"
            android:id="@+id/detail"
            android:layout_marginTop="1dp"
            android:padding="8dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_telnum"
            android:textColorHint="@color/colorLocationText"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:background="@color/colorWhite"
            android:id="@+id/telephone"
            android:textColor="@color/colorProduct"
            android:padding="8dp"
            android:paddingLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="设为默认地址"
                android:textColor="@color/colorProduct"
                android:textSize="16sp"
                android:layout_marginLeft="20dp"/>

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/order_checkbox"
                android:id="@+id/isDefault"
                android:layout_marginRight="20dp"
                android:button="@null"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:background="@drawable/app_btn"
        android:id="@+id/submit"
        android:text="@string/str_submit"/>

</LinearLayout>